--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,15 @@ dependencies {
     implementation "com.tickaroo.tikxml:annotation:$tikXml_version"
     implementation "com.tickaroo.tikxml:core:$tikXml_version"
     implementation "com.tickaroo.tikxml:retrofit-converter:$tikXml_version"
-
     kapt "com.tickaroo.tikxml:processor:$tikXml_version"
+
+    //LiveData and ViewModel
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
+    // Material Design
+    implementation "com.google.android.material:material:$support_library_version"
+
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:$support_library_version"
 }
