--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ task clean(type: Delete) {
 
 ext{
 
+    //SupportLib
+    support_library_version = '1.0.0'
+
     // Lifecycle
     lifecycle_version = '2.0.0'
 
