--- a/build.gradle
+++ b/build.gradle
@@ -50,4 +50,13 @@ ext{
 
     //XML
     tikXml_version = '0.8.13'
+
+    // Tests
+    junit_version = '4.12'
+    espresso_version = '3.1.0'
+    mockito_version = '2.7.1'
+    core_testing_version = '1.1.1'
+    test_runner_version = '1.1.1'
+    test_ext_runner_version = '1.1.0'
+    hamcrest_version = '2.1'
 }
